# orphan

./: .gitignore  DIRECTORY.md  DIRECTORY_STRUCTURE.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  README.md  gradio_app.py  pyproject.toml  requirements.txt  run_scrapers.py  scrape_config.yaml
conf/: app.yaml  data.yaml  disease_terms.txt  diseases.txt  h100_config.yaml  kaggle_catalog.yaml  model_config.yaml  scrape.yaml  snomed_config.yaml  tokenizer.yaml  train_sft.yaml  train_text.yaml
data/gold/: README.md
docs/phase1/: briefing_document.md  hazard_identification_log.md  residual_risk_analysis.md  risk_assessment_matrix.md  risk_control_measures.md  roadmap_checklist.md  technical_ip.md  user_testing_plan.md
scripts/: eta.py  kaggle_cli_setup.sh  kaggle_sync.py  launch_train.sh  run_local.sh  setup_pod.sh  shard_jsonl.py
scripts/training/: train_multimodal.sh
src/api/: infer.py  main.py  offline_infer.py  patient_cli.py  rag.py
src/chat/: patient_cli.py  patient_interface.py  triage.py
src/clean/: build_index.py  ctgov_flatten.py  enrich_labels.py  label_sectioner.py  make_corpus.py  normalize.py  run_canonical.py  run_enrich_labels.py  to_canonical.py
src/compliance/: nhs_samd_compliance.py
src/eval/: eval_gold.py  evaluation.py  make_gold_seed.py
src/ontology/: atc.py  icd10.py  mesh.py  rxnorm.py
src/rag/: build_index.py  check_recall.py  chunk.py  embed_faiss.py  eval_retrieval.py  index.py  query.py  query_faiss.py  run_build_index.py
src/scrapers/: __init__.py  base.py  base_scraper.py  clinicaltrials.py  ctgov.py  dailymed.py  http.py  run.py  (+7 more)
(+44 files in other folders)
